# shared

./: CMakeLists.txt  README.md
include/: vec.h  vec_wrapper.h
src/: bench.cpp  main.cpp  vec.c  vec.cpp  vec_wrapper.cpp
